<resources>
    <string name="app_name">CoreTestApp</string>
    <string name="result_activity_title">ResultView</string>
    <string name="main_preamble_cs_param">Preamble CS</string>
    <string name="main_parameter_energy_detector_text">Energy Detector</string>
    <string name="main_parameter_qok_shaping_text">QOK Shaping</string>
    <string name="main_parameter_local_sync_finder_text">Local Sync Finder</string>
    <string name="main_frame_type_text">Frame Type</string>
    <string name="start_button_text">Start</string>
    <string name="result_button_text">Signal cycle</string>
    <string name="data_cs_button_text">Data CS</string>
    <string name="detect_param_button_text">Detect Param</string>
    <string name="unit_buffer_param_button_text">Unit Buffer Param</string>
    <string name="combining_required_msg">combiningThreshold를 입력하세요</string>
    <string name="dialog_cs_param_title_text">CS Param 설정</string>
    <string name="cs_param_no_sig_threshold_hint_text">noSigThreshold</string>
    <string name="cs_param_combining_threshold_hint_text">combiningThreshold</string>
    <string name="dialog_detect_param_title_text">Detect Param 설정</string>
    <string name="rec_hint_text">Rec</string>
    <string name="gamma_hint_text">Gamma</string>
    <string name="dialog_ok_text">OK</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="unit_buffer_size_hint_text">Unit Buffer Size</string>
    <string name="dialog_unit_buffer_size_title_text">Unit Buffer Size 설정</string>
    <string name="rec_required_msg">Rec를 입력해주세요</string>
    <string name="gamma_required_msg">Gamma를 입력해주세요</string>
    <string name="unit_buffer_size_required_msg">Unit Buffer Size를 입력하세요</string>
    <string name="received_total_text">Received Total :</string>
    <string name="preamble_cs_thres_text">PreambleCSThres :</string>
    <string name="data_cs_thres_text">DataCSThres :</string>
    <string name="rec_t_text">RecT(avr.) :</string>
    <string name="post_rec_dec_t_text">PostRec-DecT(avr.) :</string>
    <string name="pre_cs_mar_text">PreCS MAR(avr.) :</string>
    <string name="data_cs_par_ratio_text">DataCS ParRatio(Par) :</string>
    <string name="no_energy_text">NoEnergy :</string>
    <string name="no_sig_text">NoSig :</string>
    <string name="find_sig_text">FindSig</string>
    <string name="find_energy_text">FindEnergy :</string>
    <string name="good_sig_text">GoodSig :</string>
    <string name="curr_t_text">Curr. T(y) :</string>
    <string name="ambig_sig_text">Ambig.Sig :</string>
    <string name="avg_t_text">Avg. T(y) :</string>
    <string name="crc_err_text">CRC Err :</string>
    <string name="gamma_text">Gamma :</string>
    <string name="avg_tot_decoding_time_text">avg TotDecodingTime :</string>
    <string name="avg_tot_decoding_time_histogram_text">avg TotDecodingTimeHistogram :</string>
    <string name="success_text">Success :</string>
    <string name="curr_part_text">Curr. ParT :</string>
    <string name="post_cs_per_text">Post-CS PER :</string>
    <string name="avg_part_text">Avg. ParT :</string>
    <string name="no_cs_per_text">No-CS PER :</string>
    <string name="spreading_time">Spreading Time :</string>
    <string name="riciank_factor">RicianK Factor :</string>
    <string name="freqline_slope">FreqLine Slope :</string>
    <string name="freqline_mse_db">FreqLine MSE :</string>
    <string name="ed_snr_db">ED SNR :</string>
    <string name="try_count_text">tryCnt:</string>
    <string name="is_energy_detect_text">isEnergyDetect :</string>
    <string name="preamble_cs_result_text">PreambleCSresult :</string>
    <string name="data_cs_result_text">DataCSresult :</string>
    <string name="menu_play">Play</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_mic">Request Mic Perm</string>
    <string name="mic_permission_denied">마이크 권한 불허가</string>
    <string name="mic_permission_allowed">마이크 권한 허가</string>
    <string name="dialog_rec_count_title_text">테스트 횟수 입력(0은 중지시까지)</string>
    <string name="rec_count_hint_text">테스트 횟수</string>
    <string name="mic_count_required_msg">시도 횟수를 입력하세요(0은 정지시까지 반복)</string>
    <string name="failed_core_init">코어 초기화에 실패하였습니다</string>
    <string name="decoding_result_text">DecodingResult :</string>
    <string name="write_external_storage_permission_denied">파일 쓰기 권한 불허가</string>
    <string name="write_external_storage_permission_allowed">파일 쓰기 권한 허가</string>
    <string name="dialog_capture_text">현재 내용을 저장하겠습니까 ?</string>
</resources>
