<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/dialog_cs_param_title_text"/>

    <EditText
        android:id="@+id/no_sig_threshold_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/cs_param_no_sig_threshold_hint_text"/>

    <EditText
        android:id="@+id/combining_threshold_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/cs_param_combining_threshold_hint_text"/>
</LinearLayout>