<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.bitsound.coretestapp.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingRight="7dp"
            android:paddingLeft="10dp"
            android:background="@drawable/textline">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_preamble_cs_param"
                android:textSize="18sp"/>

            <com.zcw.togglebutton.ToggleButton
                android:id="@+id/toggle_preamble_cs"
                android:layout_width="54dp"
                android:layout_height="30dp"
                app:tbOnColor="#68e99f"
                app:tbOffColor="#dbdadb"
                app:tbSpotColor="#ffdddd"
                app:tbOffBorderColor="#dbdadb"
                app:tbAsDefaultOn="true"
                app:tbBorderWidth="1dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingRight="7dp"
        android:paddingLeft="10dp"
        android:background="@drawable/textline">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_parameter_energy_detector_text"
            android:textSize="18sp"/>

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/toggle_energy_detector"
            android:layout_width="54dp"
            android:layout_height="30dp"
            app:tbOnColor="#68e99f"
            app:tbOffColor="#dbdadb"
            app:tbSpotColor="#ffdddd"
            app:tbOffBorderColor="#dbdadb"
            app:tbAsDefaultOn="true"
            app:tbBorderWidth="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingRight="7dp"
        android:paddingLeft="10dp"
        android:background="@drawable/textline">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_parameter_qok_shaping_text"
            android:textSize="18sp"/>

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/toggle_qok_shaping"
            android:layout_width="54dp"
            android:layout_height="30dp"
            app:tbOnColor="#68e99f"
            app:tbOffColor="#dbdadb"
            app:tbSpotColor="#ffdddd"
            app:tbOffBorderColor="#dbdadb"
            app:tbAsDefaultOn="true"
            app:tbBorderWidth="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingRight="7dp"
        android:paddingLeft="10dp"
        android:background="@drawable/textline">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_parameter_local_sync_finder_text"
            android:textSize="18sp"/>

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/toggle_local_sync_finder"
            android:layout_width="54dp"
            android:layout_height="30dp"
            app:tbOnColor="#68e99f"
            app:tbOffColor="#dbdadb"
            app:tbSpotColor="#ffdddd"
            app:tbOffBorderColor="#dbdadb"
            app:tbAsDefaultOn="true"
            app:tbBorderWidth="1dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:paddingRight="7dp"
        android:paddingLeft="10dp"
        android:background="@drawable/textline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_frame_type_text"
            android:textSize="18sp"
            android:paddingRight="7dp"/>
        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/frame_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>